--- a/css/nav.css
+++ b/css/nav.css
@@ -1,4 +1,4 @@
-/*@import url(http://fonts.googleapis.com/css?family=Raleway);*/
+@import url(http://fonts.googleapis.com/css?family=Raleway);
 #cssmenu,
 #cssmenu ul,
 #cssmenu ul li,
@@ -31,7 +31,7 @@
 }
 #cssmenu ul {
   padding-left: 50px;
-  background: #ffffff;
+  background: linear-gradient(white,  wheat);
 }
 #cssmenu > ul > li {
   float: left;
