--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -5,6 +5,8 @@ img {vertical-align: middle;}
   width: 100%;
   position: relative;
   margin: auto;
+  height: fit-content;
+  background-color: gray;
 }
 
 /* Next & previous buttons */
@@ -37,27 +39,37 @@ img {vertical-align: middle;}
 /* Caption text */
 .text {
   background-color: rgb(0,0,0,0.8);
-  border-left: #47c9af solid 100px;
+  border-left: solid 20%;
   color: white;
-  font-size: 15px;
+  font-size: 1.25vw;
   padding: 8px 12px;
   position: absolute;
-  right: 0px;
   bottom: 35%;
   width: 40%;
   height: 30%;
   text-align: left;
 }
 
+.text h1{
+    font-family: Raleway;
+    font-weight: bolder;
+}
+.text li{
+    line-height: 40px;  
+    list-style-type: none;
+}
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
+  bottom: 10px;
   top: 0;
 }
-
+a {
+    color: goldenrod;
+}
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
@@ -70,7 +82,8 @@ img {vertical-align: middle;}
   transition: background-color 0.6s ease;
 }
 #dots{
-    bottom: -10px;
+    position: relative;
+    bottom: 1%;
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -103,5 +116,5 @@ img {vertical-align: middle;}
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
+  .prev, .next,.text,.text h1,.text p {font-size: 11px}
 }
