--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -1,4 +1,4 @@
-
+@import url(http://fonts.googleapis.com/css?family=Raleway);
 img {vertical-align: middle;}
 /* Slideshow container */
 .slideshow-container {
