--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -1,9 +1,4 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway);
-
-@font-face {
-  font-family: Raleway;
-  src: url(http://fonts.googleapis.com/css?family=Raleway);
-}
 img {vertical-align: middle;}
 /* Slideshow container */
 .slideshow-container {
@@ -56,7 +51,7 @@ img {vertical-align: middle;}
 }
 
 .text h1{
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-weight: bolder;
 }
 .text li{
