--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -1,14 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway);
 img {vertical-align: middle;}
 /* Slideshow container */
-.slideshow-container {
-  width: 100%;
-  position: relative;
-  margin: auto;
-  height: fit-content;
-  background-color: gray;
-}
-
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
@@ -37,23 +29,8 @@ img {vertical-align: middle;}
 }
 
 /* Caption text */
-.text {
-  background-color: rgb(0,0,0,0.8);
-  border-left: solid 20%;
-  color: white;
-  font-size: 1.25vw;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 35%;
-  width: 40%;
-  height: 30%;
-  text-align: left;
-}
 
-.text h1{
-    font-family: Raleway, sans-serif;
-    font-weight: bolder;
-}
+
 .text li{
     line-height: 40px;  
     list-style-type: none;
@@ -66,9 +43,6 @@ img {vertical-align: middle;}
   position: absolute;
   bottom: 10px;
   top: 0;
-}
-a {
-    color: goldenrod;
 }
 /* The dots/bullets/indicators */
 .dot {
@@ -117,4 +91,8 @@ a {
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .prev, .next,.text,.text h1,.text p {font-size: 11px}
+}
+
+.carousel-control{
+    background-color: #cccccc;
 }
