--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+header{
+    background-color: white;
+}
 article{
     top:30px;
     width: 80%;
@@ -14,15 +17,18 @@ article{
     margin: 10px 0 0 0;
     width: 24%;
     float: left;
-    height: 300px;
+    min-height: 400px;
+    max-height: 600px;
     font-size: 1.25vw;
     margin-left: 1%;
     display: block;
     text-align: center;
+    min-width: 150px;
 }
 article .colart img{
+    padding-top:  20px;
     margin:auto;
-    height: 10%;
+    width: 40%;
 }
 article p{
     width: 80%;
