--- a/css/main.css
+++ b/css/main.css
@@ -2,16 +2,13 @@
   box-sizing: border-box;
 }
 body{
-    font-family: Verdana;
     display: block;
     margin: 0px;
     max-width: 100%;
     overflow-x:  hidden;
-    
+    font-family: sans-serif;
     display: block;
-}
-header{
-    margin: 0;
+    background-color: rgb(230,230,230);
 }
 header img{
     width: 100%;
@@ -28,26 +25,40 @@ nav {
 /* Style the links inside the navigation bar */
 .column {
   float: left;
+  margin-bottom: 10px;
 }
 
 /* Left and right column */
 .column.side {
-  width: 18%;
-  margin-left: 1%;
-  margin-right: 1%;
-  padding: 10px;
-  border: 1px solid;
-  margin-top: 30px;
+  margin-top: 3%;
+  width: 20%;
+  border-radius: 2px;
+  border: 0.5px wheat solid;
 }
-
+.column.side img{
+    width: 100%;
+}
+.custom-add a{
+    color: red;
+}
+.custom-add td{
+    width: 50%;
+    position: relative;
+    left: -10px;top: -10px;
+}
 /* Middle column */
 .column.middle {
-  width: 60%;
-  margin: auto;
-  border: solid 1px;
+  width: 77%;
+  margin-left: 3%;
   display: block;
-  background-color: #bbbbbb;
+  background-color: rgba(244, 244, 244, 0.2);
   
+}
+.column.middle h1{
+    font-size: 32pt;
+    margin-left: 1.25%;
+    font-family: Fjalla One, serif;
+    font-weight:900;
 }
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
@@ -59,12 +70,16 @@ nav {
   content: "";
   display: table;
 }
-
+p{
+    text-indent: 0px;
+}
 footer{
     margin-top: 50px;
     background:  linear-gradient(black,#222222,#222222,#222222,#222222,#222222,  black);
     color: #47c9af;
     padding: 10px;
+    clear: both;
+   font-size: 1.5vw;
 }
 footer p{
     text-align: center;
@@ -78,7 +93,7 @@ footer a{
 }
 footer a:hover{
     text-decoration: none;
-    color: crimson;
+    color: red;
 }
 footer img{
     width: 40%;
@@ -97,10 +112,9 @@ footer .footcol a{
     width: 100%
 }
 footer > div > a > h4{
-    font-family: sans-serif;
+    font-family: Raleway, sans-serif;
    margin-top: 15%;
    left: 2%;position: relative;
-   font-size: 20px;
 }
 footer b{
     color: gold;
