--- a/css/nav.css
+++ b/css/nav.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway);
+@import url(http://fonts.googleapis.com/css?family=Fjalla%20One);
 #cssmenu,
 #cssmenu ul,
 #cssmenu ul li,
@@ -31,7 +32,7 @@
 }
 #cssmenu ul {
   padding-left: 50px;
-  background: linear-gradient(white,  wheat);
+  background: white;
 }
 #cssmenu > ul > li {
   float: left;
