--- a/css/nav.css
+++ b/css/nav.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway);
-@import url(http://fonts.googleapis.com/css?family=Fjalla%20One);
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+@import url(https://fonts.googleapis.com/css?family=Fjalla%20One);
 #cssmenu,
 #cssmenu ul,
 #cssmenu ul li,
