--- a/css/news.css
+++ b/css/news.css
@@ -15,7 +15,7 @@
     vertical-align: text-bottom;
 }
 .news-art:hover{
-    color: red;
+    color: crimson;
     background: rgba(0,0,0,0);
 }
 .colart{
