--- a/css/article.css
+++ b/css/article.css
@@ -1,2 +1,26 @@
-article{    
+article .artcont{
+    padding-left: 2%;
+}
+article .artcont p{
+    margin-left: 0px;
+    width: 80%;
+}
+article figure{  
+    position: relative;
+    width: 100%;
+    left: 0;
+    margin-left: 2%;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+article img{
+    position: relative;
+    width: 80%;
+}
+
+article p a, article ul li a{
+    color: crimson;
+}
+article p a:hover{
+    color: cyan;
 }
